--- a/contact.html
+++ b/contact.html
@@ -19,15 +19,15 @@
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+               <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="nav-item">
-                        <a class="nav-link" aria-current="page" href="/">Home</a>
+                        <a class="nav-link active" aria-current="page" href="/CodeLearn">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link " href="/about.html">About</a>
+                        <a class="nav-link" href="/CodeLearn/about.html">About</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link active" href="/contact.html">Contact us</a>
+                        <a class="nav-link" href="/CodeLearn/contact.html">Contact us</a>
                     </li>
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
@@ -42,6 +42,11 @@
                             </li>
                             <li><a class="dropdown-item" href="#">Something else here</a></li>
                         </ul>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link disabled">Disabled</a>
+                    </li>
+                </ul>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link disabled">Disabled</a>
